--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4303,3 +4303,6 @@ input[type="submit"] {
 .page-user.page-user-password #user_page_content ul.tabs.primary{
   display: none;
 }
+.page-user.page-user-password #user-pass #edit-name {
+    margin-left: 14px;
+}
