--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3508,7 +3508,7 @@ body.page-search #block-system-main .views-row {
     line-height: 38px;
     padding-bottom: 8px;
     padding-top: 40px;
-    width: 700px;
+    width: 700px!important;
 }
 .newWelcom {
     font-size: 20px;
