--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3491,7 +3491,7 @@ ul.quicktabs-tabs.quicktabs-style-zen {
 }
 #sidr-wrapper-0{
   float: left;
-    margin-left: 14px;
+    // margin-left: 14px;
 }
 
 /*** added menu logo style**/
