--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -165,7 +165,7 @@ transition: all 3s ease-in-out;
 }
 #searchWrapper input {
     background: #433a3a url("../images/mag_glass_grey.svg") no-repeat scroll right 10px center;
-    border: 1px solid #746d6d;
+    border: 1px solid #fff;
     color: #b2b2b2;
     font-size: 16px;
     height: 34px;
