--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -3604,7 +3604,7 @@ body.page-search #block-system-main .views-row {
 
 /***style for popup when user is not log in***/
 #popupNotLogin {
-    background: none repeat scroll 0 0 #9C1F19;
+    background: none repeat scroll 0 0 #2090dc;
     color: #FFFFFF;
     padding: 15px 0;
     text-align: center;
