--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1351,7 +1351,10 @@ footer>nav+div #block-block-2 a :hover {
     margin-left: 40px;
     margin-right: 40px;
 }
-
+// will remove when the js run
+#fpSocialMediaBlock1{
+    width: 880px;
+}
 /* ================= END FOOTER =========================== */
 
 
