added google font

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -11,7 +11,7 @@
                 // And we put "_" do not duplicate the file in our css directory.
 
 @import "jquery.mCustomScrollbar"; // we import the custom scroll bar style
-
+@import url("http://fonts.googleapis.com/css?family=Gochi+Hand");  
 // ==================================================================
 //  Usign variable
 //  =================================================================
