--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -1741,6 +1741,7 @@ h1#page-title {
     line-height: 24px;
     margin-top: 47px;
     text-transform: uppercase;
+    padding-top: 50px;
 }
 .page-search h1#page-title{
     display: inline-block;
