--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4816,3 +4816,452 @@ input[type="submit"] {
 .page-user.page-user-password #user-pass #edit-name {
     margin-left: 14px;
 }
+//***************style for marketing page******************//
+
+#bannerMarketingPage {
+    background-color: #f5f5f5;
+    float: left;
+    padding: 2vw 0 1vw;
+    text-align: center;
+    width: 100%;
+}
+
+.bannerMarketingPageContentText {
+    color: #0183e0;
+    font-family: georgia;
+    font-size: 3.5vw;
+    margin: 0;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+}
+.bannerMarketingPageContent > span {
+    color: #433a3a;
+    display: inline-block;
+    font-family: ProxiRegular;
+    font-size: 2vw;
+    margin-bottom: 10px;
+    margin-top: 2vw;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
+}
+#courseMarketingPageContentWrapper {
+    float: left;
+    margin-top: 35px;
+    width: 100%;
+}
+.courseMarketingPageContentWrapper{
+    margin: 35px auto;
+    padding-bottom: 35px;
+}
+.courseMarketingPageContent {
+    border-bottom: 1px solid #cdcdcd;
+    margin: 35px auto;
+    padding-bottom: 35px;
+}
+.courseMarketingPageContentImg {
+    float: left;
+    margin-right: 40px;
+    width: 440px;
+}
+.courseMarketingPageContentTextWrapper {
+    float: left;
+    width: 460px;
+}
+.courseMarketingPageContentText a{
+    color: #433a3a;
+}
+a.readMoreLinkMarketing {
+    color: #0083e0;
+    font-family: proxiregular;
+    font-size: 14px;
+    line-height: 22px;
+    margin-left: 10px;
+}
+
+.courseMarketingPageContentText {
+    color: #433a3a;
+    font-family: georgia;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 24px;
+}
+.courseMarketingPageContentInfoWrapper,
+.courseMarketingPageContentInfoWrapper a {
+    color: #888888;
+    font-size: 16px;
+    line-height: 22px;
+    text-transform: capitalize;
+}
+.viewCourseLink {
+    float: right;
+    text-align: right;
+}
+.viewCourseLink > a {
+    background: rgba(0, 0, 0, 0) url("../images/arrow-right.jpg") no-repeat scroll right center;
+    color: #0183e0;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    padding-right: 20px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.courseMarketingPageContentInfoTeacher {
+    float: left;
+    margin-bottom: 10px;
+    width: 100%;
+}
+#lessonListMarketing .views-row-last .courseMarketingPageContent{
+    border: none;
+}
+@media (min-width: 980px) {
+    .bannerMarketingPageContent{
+        width: 940px;
+        margin: auto;
+    }
+    .courseMarketingPageContent,
+    .courseMarketingPageContentWrapper {
+        height: 248px;
+        width: 940px;
+    }
+    #bannerMarketingPagedescription {
+        width: 680px;
+    }
+    #bannerMarketingPageTeacherInfo {
+        width: 220px;
+    }
+    .lessonMarketingPageContentImg{
+        width: 220px;
+        margin-right: 30px;
+        float: left;
+    }
+    .lessonMarketingPageContentTextWrapper{
+        width: 690px;
+        float: left;
+    }
+    #lessonListMarketing .courseMarketingPageContent{
+        float: left;
+        height: auto;
+        margin-top: 0;
+    }
+    #playerVideo{
+        margin: auto;
+        text-align: left;
+        width: 940px;
+    }
+    
+}
+ #playerVideo{
+    text-align: left;
+}
+#playerVideo .transcription{
+    border-bottom:1px solid #000;
+}
+@media (max-width: 979px) {
+    .bannerMarketingPageContent{
+        width: 90%;
+        margin: auto;
+    }
+    .bannerMarketingPageContent p {
+        font-size: 5.5vw;
+    }
+    .bannerMarketingPageContent > span{
+       font-size: 4.5vw; 
+    }
+    .courseMarketingPageContent{
+        float: left;
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    .courseMarketingPageContentImg {
+        margin-right: 5%;
+        width: 40%;
+    }
+    .lessonMarketingPageContentImg {
+        margin-right: 5%;
+        width: 30%;
+        float: left;
+    }
+    .courseMarketingPageContentTextWrapper{
+        width: 55%;
+    }
+    .lessonMarketingPageContentTextWrapper {
+        width: 65%;
+        float: left;
+    }
+    #lessonListMarketing .courseMarketingPageContent {
+        margin-left: 0;
+        margin-right: 0;
+    }
+    .courseMarketingPageContent #courseMarketingPageListnbr{
+        padding: 0 10% 10px;
+        width: auto;
+    }
+    .lessonsCourseList {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+    
+}
+@media (max-width: 768px){
+    
+    .courseMarketingPageContentTextWrapper,
+    .courseMarketingPageContentImg,
+    .lessonMarketingPageContentTextWrapper,
+    .lessonMarketingPageContentImg {
+        margin-bottom: 20px;
+        margin-right: 0;
+        width: 100%;
+    }
+    .courseMarketingPageContent{
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+    #courseMarketingPageContentWrapper{
+        margin-top: 0;
+    }
+    .lessonsCourseListWrapper .lessonsCourseList {
+        padding: 0 10px 20px;
+    }
+    .videoResourses > span {
+        display: block;
+        margin-bottom: 20px;
+    }
+    .courseMarketingPageContentWrapper {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+}
+.courseMarketingPageContentImg img,
+#bannerMarketingPageImg img,
+.lessonMarketingPageContentImg img{
+    width: 100%;
+    height: auto;
+}
+#contactMarketingPageContentWrapper {
+    background: #f8f8f8 none repeat scroll 0 0;
+    float: left;
+    padding: 20px 0 30px;
+    text-align: center;
+    width: 100%;
+}
+#contactMarketingPageContentWrapper  {
+    color: #433a3a;
+    font-size: 26px;
+}
+#contactMarketingPageContentWrapper a {
+    background: #208fdc none repeat scroll 0 0;
+    color: #fff;
+    font-family: georgia;
+    font-size: 22px;
+
+    padding: 13px 65px;
+    text-decoration: none;
+}
+#contactMarketingPageContentWrapper div:last-child {
+    margin: 40px 0 60px;
+}
+.bannerMarketingPageImgWrapper {
+    padding-top: 0 !important;
+}
+#bannerMarketingPageTeacherInfo {
+    float: left;
+    margin-right: 40px;
+    margin-top: 35px;
+    text-align: left;
+    /*width: 220px;*/
+}
+#bannerMarketingPagedescription {
+    color: #433a3a;
+    float: left;
+    font-family: georgia;
+    font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 20px;
+    margin-top: 35px;
+    text-align: left;
+    /*width: 680px;*/
+}
+
+#bannerMarketingPageTeacherInfo{   
+    font-size: 16px;
+    line-height: 22px;
+}
+#bannerMarketingPageTeacherInfo > div {
+   color: #888888; 
+}
+#bannerMarketingPageTeacherInfo > span {
+   color: #433a3a; 
+}
+#courseMarketingPageListnbr {
+    border-bottom: 1px solid #433a3a;
+    color: #433a3a;
+    font-size: 16px;
+    font-weight: bolder;
+    letter-spacing: 2px;
+    margin: auto auto 30px;
+    padding-bottom: 10px;
+    text-align: center;
+    text-transform: uppercase;
+    width: 418px;
+}
+
+.lessonMarketingPageContentTextWrapper h1 {
+    font-size: 22px;
+    margin-bottom: 10px;
+    margin-top: 0;
+}
+.videoWrapper {
+    background: #000 none repeat scroll 0 0;
+}
+.videoTitle > h1 {
+    border-bottom: 1px solid #433a3a;
+    color: #433a3a;
+    font-family: georgia;
+    font-size: 35px;
+    font-weight: normal;
+    padding-bottom: 15px;
+    text-transform: capitalize;
+}
+
+.videoInfo {
+    text-align: left;
+    width: 100%;
+}
+.videoSocialMedia {
+    float: right;
+}
+.videoSocialMedia .sharethis{
+    border-top: medium none;
+    padding-top: 0;
+}
+.videoInfoTeacher {
+    color: #433a3a;
+    float: left;
+    font-size: 16px;
+}
+.videoInfoTeacher a{
+    color: #433a3a;
+}
+.videoInfoTeacher span {
+    color: #888888;
+}
+.videoInfoTeacher > div {
+    margin-bottom: 5px;
+}
+.videoDescriptionWrapper {
+    float: left;
+    margin-bottom: 30px;
+    margin-top: 15px;
+    width: 100%;
+    color: #433a3a;
+    font-family: georgia;
+    font-size: 20px;
+    text-align: left;
+}
+.videoResourses {
+    color: #433a3a;
+    float: left;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin-bottom: 40px;
+
+}
+.videoResourses > a {
+    color: #1d88d1;
+    font-weight: normal;
+    letter-spacing: 0;
+    text-decoration: none;
+}
+.videoResourses > a img {
+    margin-left: 50px;
+    margin-right: 15px;
+    vertical-align: middle;
+}
+
+
+.lessonsCourseList > p {
+    color: #433a3a;
+    font-size: 18px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    margin: 20px 0 0;
+    padding: 0;
+    text-transform: uppercase;
+}
+.lessonsCourseList > h1,
+.lessonsCourseList > h1 a {
+    color: #433a3a;
+    font-family: georgia;
+    font-size: 22px;
+    text-transform: capitalize;
+}
+.lessonsCourseList > span,
+.lessonsCourseList > span a {
+    color: #888888;
+    font-size: 16px;
+}
+.lessonsCourseList span:last-child {
+    float: right;
+}
+.views-row-last .lessonsCourseList {
+    margin-bottom: 100px;
+}
+#bannerMarketingPageImg > img {
+    height: 439px;
+}
+@media (max-width: 1096px) {
+
+    .lessonsCourseList{
+        width: 840px;
+        margin: auto;
+        border-bottom: 1px solid #ccc;
+        padding: 0 50px 20px;
+    }
+
+}
+@media (min-width: 1097px) {
+
+    .lessonsCourseList{
+        width: 940px;
+        margin: auto;
+        border-bottom: 1px solid #ccc;
+        padding: 0 50px 20px;
+
+    }
+
+}
+.views-row-last .courseMarketingPageContent{
+    border: none;
+}
+.lessonsCourseList.activeMarketingLesson a {
+    color: #1d88d1;
+}
+.smallTextDesc {
+    height: 120px;
+    overflow:hidden;
+    // display: inline;
+
+}
+.bigTextDesc {
+    height: auto;
+    // display: inline;
+
+}
+#bannerMarketingPagedescription a.readMoreLinkMarketing {
+    float: right;
+    margin-top: -24px;
+}
+.courseMarketingPageContentImg img{
+    display: none;
+}
+.courseMarketingPageContentImg {
+    text-align: center;
+}
+.courseMarketingPageContentImg > a {
+    color: #fff;
+    font-size: 50px;
+    font-weight: bold;
+    line-height: 58px;
+    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.8);
+}
+//***************end style for marketing page******************//
