--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5259,6 +5259,7 @@ a.readMoreLinkMarketing {
 }
 .courseMarketingPageContentImg > a {
     color: #fff;
+    font-family: helvetica;
     font-size: 50px;
     font-weight: bold;
     line-height: 58px;
