--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5265,5 +5265,6 @@ a.readMoreLinkMarketing {
     font-weight: bold;
     line-height: 58px;
     text-shadow: 0 2px 0 rgba(0, 0, 0, 0.8);
+    display: block;
 }
 //***************end style for marketing page******************//
