added script to move image to background image

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5255,7 +5255,8 @@ a.readMoreLinkMarketing {
     float: right;
     margin-top: -24px;
 }
-.courseMarketingPageContentImg img{
+.courseMarketingPageContentImg img,
+#bannerMarketingPageImg img{
     display: none;
 }
 .courseMarketingPageContentImg > a {
