--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5268,4 +5268,9 @@ a.readMoreLinkMarketing {
     text-shadow: 0 2px 0 rgba(0, 0, 0, 0.8);
     display: block;
 }
+#bannerMarketingPageImg{
+    background-position: center center;
+    background-size: cover;
+    height: 439px;
+}
 //***************end style for marketing page******************//
