--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5273,4 +5273,7 @@ a.readMoreLinkMarketing {
     background-size: cover;
     height: 439px;
 }
+#bannerMarketingPageImg.videoWrapper {
+    height: auto;
+}
 //***************end style for marketing page******************//
