--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5276,4 +5276,8 @@ a.readMoreLinkMarketing {
 #bannerMarketingPageImg.videoWrapper {
     height: auto;
 }
+#bannerMarketingPageImg.videoWrapper .buttonDownloadAudio img {
+    display: block;
+    width: auto;
+}
 //***************end style for marketing page******************//
