added style for non log-in user in marketing section

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5311,4 +5311,14 @@ a.readMoreLinkMarketing {
         height: 439px;
     }
 }
+.nlvwrapperLoginBloc{
+    float: left;
+  width: 100%;
+  padding-top: 60px;
+}
+.nlvwrapperLoginBloc .wrapperLoginBloc#wrapperPrice{
+  margin: auto;
+  display: block;
+  width: 400px;
+}
 //***************end style for marketing page******************//
