--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5321,4 +5321,7 @@ a.readMoreLinkMarketing {
   display: block;
   width: 400px;
 }
+.readMoreLinkMarketing.removeExpand {
+    display: none;
+}
 //***************end style for marketing page******************//
