--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5255,7 +5255,7 @@ a.readMoreLinkMarketing {
 }
 #bannerMarketingPagedescription a.readMoreLinkMarketing {
     float: right;
-    margin-top: -24px;
+    //margin-top: -24px;
 }
 .courseMarketingPageContentImg img,
 #bannerMarketingPageImg img{
