--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5070,10 +5070,10 @@ a.readMoreLinkMarketing {
 }
 #bannerMarketingPageTeacherInfo {
     float: left;
-    margin-right: 40px;
+    // margin-right: 40px;
     margin-top: 35px;
     text-align: left;
-    /*width: 220px;*/
+    width: 27.65%;
 }
 #bannerMarketingPagedescription {
     color: #433a3a;
@@ -5084,7 +5084,7 @@ a.readMoreLinkMarketing {
     margin-bottom: 20px;
     margin-top: 35px;
     text-align: left;
-    /*width: 680px;*/
+    width: 72.34%;
 }
 
 #bannerMarketingPageTeacherInfo{   
