--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -11,7 +11,8 @@
                 // And we put "_" do not duplicate the file in our css directory.
 
 @import "jquery.mCustomScrollbar"; // we import the custom scroll bar style
-@import url("https://fonts.googleapis.com/css?family=Gochi+Hand");  
+@import url("https://fonts.googleapis.com/css?family=Gochi+Hand"); 
+@import url("http://fonts.googleapis.com/css?family=Roboto+Condensed:700"); 
 // ==================================================================
 //  Usign variable
 //  =================================================================
@@ -5265,7 +5266,7 @@ a.readMoreLinkMarketing {
 }
 .courseMarketingPageContentImg > a {
     color: #fff;
-    font-family: helvetica;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 48px;
     font-weight: bold;
     line-height: 56px;
@@ -5286,7 +5287,7 @@ a.readMoreLinkMarketing {
      width: 100%;
      color: #fff;
    
-    font-family: helvetica;
+    font-family: 'Roboto Condensed', sans-serif;
     font-size: 67px;
     
     letter-spacing: 1px;
