--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -12,7 +12,7 @@
 
 @import "jquery.mCustomScrollbar"; // we import the custom scroll bar style
 @import url("https://fonts.googleapis.com/css?family=Gochi+Hand"); 
-@import url("http://fonts.googleapis.com/css?family=Roboto+Condensed:700"); 
+@import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:700"); 
 // ==================================================================
 //  Usign variable
 //  =================================================================
