--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5270,7 +5270,7 @@ a.readMoreLinkMarketing {
     font-size: 48px;
     font-weight: bold;
     line-height: 56px;
-    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.8);
+    text-shadow: 1px 1px 9px 0 rgba(0, 0, 0, 0.22);
     display: table-cell;
     vertical-align: middle;
     padding: 0 20px;
@@ -5282,17 +5282,15 @@ a.readMoreLinkMarketing {
     
 }
 .bannerMarketingPagebg{
-     display: inline-table;
-     height: 300px;
-     width: 100%;
-     color: #fff;
-   
+    display: inline-table;
+    height: 300px;
+    width: 100%;
+    color: #fff;
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 67px;
-    
     letter-spacing: 1px;
     line-height: 75px;
-    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.8);
+    text-shadow: 1px 1px 9px 0 rgba(0, 0, 0, 0.22);
 }
 .bannerMarketingPageImgTitle{
     display: table-cell;
