--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5270,7 +5270,7 @@ a.readMoreLinkMarketing {
     font-size: 48px;
     font-weight: bold;
     line-height: 56px;
-    text-shadow: 1px 1px 9px 0 rgba(0, 0, 0, 0.22);
+    text-shadow: 1px 1px 9px 0px rgba(0, 0, 0, 0.22);
     display: table-cell;
     vertical-align: middle;
     padding: 0 20px;
@@ -5290,7 +5290,7 @@ a.readMoreLinkMarketing {
     font-size: 67px;
     letter-spacing: 1px;
     line-height: 75px;
-    text-shadow: 1px 1px 9px 0 rgba(0, 0, 0, 0.22);
+    text-shadow: 1px 1px 9px 0px rgba(0, 0, 0, 0.22);
 }
 .bannerMarketingPageImgTitle{
     display: table-cell;
