--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5270,7 +5270,8 @@ a.readMoreLinkMarketing {
     font-size: 48px;
     font-weight: bold;
     line-height: 56px;
-    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.8);
+    text-shadow: 1px 1px 9px rgba(0, 0, 0, 0.2);
+
     display: table-cell;
     vertical-align: middle;
     padding: 0 20px;
@@ -5292,7 +5293,8 @@ a.readMoreLinkMarketing {
     
     letter-spacing: 1px;
     line-height: 75px;
-    text-shadow: 0 2px 0 rgba(0, 0, 0, 0.8);
+    //text-shadow: 0 2px 0 rgba(0, 0, 0, 0.8);
+    text-shadow: 1px 1px 9px rgba(0, 0, 0, 0.2); 
 }
 .bannerMarketingPageImgTitle{
     display: table-cell;
