--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5122,13 +5122,14 @@ a.readMoreLinkMarketing {
     background: #000 none repeat scroll 0 0;
 }
 .videoTitle > h1 {
-    border-bottom: 1px solid #433a3a;
+    border-bottom: 1px solid #ccc;
     color: #433a3a;
     font-family: georgia;
     font-size: 35px;
     font-weight: normal;
     padding-bottom: 15px;
     text-transform: capitalize;
+    margin-top: 53px;
 }
 
 .videoInfo {
@@ -5157,14 +5158,15 @@ a.readMoreLinkMarketing {
     margin-bottom: 5px;
 }
 .videoDescriptionWrapper {
-    float: left;
-    margin-bottom: 30px;
-    margin-top: 15px;
-    width: 100%;
     color: #433a3a;
+    float: left;
     font-family: georgia;
     font-size: 20px;
+    line-height: 30px;
+    margin-bottom: 30px;
+    margin-top: 15px;
     text-align: left;
+    width: 100%;
 }
 .videoResourses {
     color: #433a3a;
@@ -5190,19 +5192,23 @@ a.readMoreLinkMarketing {
 
 .lessonsCourseList > p {
     color: #433a3a;
-    font-size: 18px;
-    font-weight: bold;
+    font-size: 16px;
+    font-weight: bolder;
     letter-spacing: 2px;
     margin: 20px 0 0;
     padding: 0;
     text-transform: uppercase;
+}
+.lessonsCourseList > h1 {
+    margin-bottom: 7px;
+    margin-top: 15px;
 }
 .lessonsCourseList > h1,
 .lessonsCourseList > h1 a {
     color: #433a3a;
     font-family: georgia;
     font-size: 22px;
-    text-transform: capitalize;
+    font-weight: normal;
 }
 .lessonsCourseList > span,
 .lessonsCourseList > span a {
