--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5232,6 +5232,13 @@ a.readMoreLinkMarketing {
         border-bottom: 1px solid #ccc;
         padding: 0 50px 20px;
     }
+    .videoDescriptionWrapper{
+        display: inline-block;
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+        width: 840px;
+    }
 
 }
 @media (min-width: 1097px) {
