--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5239,6 +5239,10 @@ a.readMoreLinkMarketing {
         margin-right: auto;
         width: 840px;
     }
+    .videoInfo {
+        margin: auto;
+        width: 840px;
+    }
 
 }
 @media (min-width: 1097px) {
