--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5319,7 +5319,7 @@ a.readMoreLinkMarketing {
 }
 #bannerMarketingPageImg.videoWrapper {
     background: rgba(0, 0, 0, 0) url("/sites/all/themes/ukabbalah/images/wrapper_player_bg.jpg") repeat-x scroll 0 0 !important;
-    height: auto;
+    height: 573px;
 }
 #bannerMarketingPageImg.videoWrapper .buttonDownloadAudio img {
     display: block;
