removed extra space

--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5356,3 +5356,6 @@ a.readMoreLinkMarketing {
     margin-top: 0;
 }
 //***************end style for marketing page******************//
+.page-node-6413 #mainContentWrapper h1#page-title {
+    display: none
+}
