--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -5356,6 +5356,7 @@ a.readMoreLinkMarketing {
     margin-top: 0;
 }
 //***************end style for marketing page******************//
-.page-node-6413 #mainContentWrapper h1#page-title {
+.page-node-6413 #mainContentWrapper h1#page-title,
+.page-node-6413 #mainContentWrapper footer {
     display: none
 }
