updated images url

--- a/sites/all/themes/ukabbalah/css/landing_page.css
+++ b/sites/all/themes/ukabbalah/css/landing_page.css
@@ -1,5 +1,5 @@
 #jumbotrom {
-    background: rgba(0, 0, 0, 0) url("../images/background.jpg") repeat scroll 0 0 / cover ;
+    background: rgba(0, 0, 0, 0) url("/sites/all/themes/ukabbalah/images/background.jpg") repeat scroll 0 0 / cover ;
     margin: 0 auto;
     text-align: center;
     width: 100%;
