--- a/sites/all/themes/ukabbalah/sass/style.scss
+++ b/sites/all/themes/ukabbalah/sass/style.scss
@@ -4838,7 +4838,8 @@ input[type="submit"] {
     color: #433a3a;
     display: inline-block;
     font-family: ProxiRegular;
-    font-size: 2vw;
+    //font-size: 2vw;
+    font-size: 19px; 
     margin-bottom: 10px;
     margin-top: 2vw;
     text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
