--- a/sites/all/themes/ukabbalah/css/landing_page.css
+++ b/sites/all/themes/ukabbalah/css/landing_page.css
@@ -48,12 +48,14 @@
     font-size: 23px;
     line-height: 32px;
     margin-bottom: 35px;
+    padding-top: 7px;
 }
 #registerHereWrapper img.register_bottom {
     margin-right: 15px;
 }
 #registerHereWrapper {
     margin-bottom: 60px;
+    margin-top: 40px;
 }
 .highlightText::first-letter {
     font-size: 63px;
